# ChangeLog for net-misc/netkit-rsh
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/netkit-rsh/ChangeLog,v 1.67 2009/09/10 15:37:23 ssuominen Exp $

  10 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
  netkit-rsh-0.17-r9.ebuild:
  Fix xz-utils vs. lzma-utils deps.

  21 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  -netkit-rsh-0.17-r8.ebuild, -files/rexec.pamd-include,
  -files/rlogin.pamd-include, files/rlogin.pamd-pambase,
  -files/rsh.pamd-include, files/rsh.pamd-pambase:
  Remove old version (drops ~x86-fbsd!), fix rhost_auth references (bug
  #233242).

  12 Jan 2009; Guy Martin <gmsoft@gentoo.org> netkit-rsh-0.17-r9.ebuild:
  hppa stable, #250892

  28 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  netkit-rsh-0.17-r9.ebuild:
  ppc stable, bug #250892

  27 Dec 2008; Brent Baude <ranger@gentoo.org> netkit-rsh-0.17-r9.ebuild:
  stable ppc64, bug 250892

  23 Dec 2008; Raúl Porcel <armin76@gentoo.org> netkit-rsh-0.17-r9.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #250892

  22 Dec 2008; Markus Meier <maekke@gentoo.org> netkit-rsh-0.17-r9.ebuild:
  amd64/x86 stable, bug #250892

  20 Dec 2008; Peter Volkov <pva@gentoo.org> netkit-rsh-0.17-r8.ebuild,
  netkit-rsh-0.17-r9.ebuild:
  ~mips rekeyworeded, bug #210783.

  16 Jun 2008; Mike Frysinger <vapier@gentoo.org> netkit-rsh-0.17-r9.ebuild:
  Fix building when ARG_MAX is not defined #225341 by Tobias Scherbaum.

  14 Jun 2008; nixnut <nixnut@gentoo.org> netkit-rsh-0.17-r9.ebuild:
  Added ~ppc wrt bug 210783

  21 Mar 2008; Markus Meier <maekke@gentoo.org> netkit-rsh-0.17-r9.ebuild:
  add ~amd64, bug #210783

  06 Mar 2008; Raúl Porcel <armin76@gentoo.org> netkit-rsh-0.17-r9.ebuild:
  Add ~alpha/~ia64 wrt #210783

  05 Mar 2008; Ferris McCormick <fmccor@gentoo.org>
  netkit-rsh-0.17-r9.ebuild:
  Add back ~sparc for testing, Bug #210783.

  05 Mar 2008; Brent Baude <ranger@gentoo.org> netkit-rsh-0.17-r9.ebuild: