@@ -1,7 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX netkit-rsh-0.17-darwin.patch 5614 RMD160 530a95bd9bd49f5696ee886e71c73da36dd28dbe SHA1 77a3154a19cb0cf84aa094de711a553de036f631 SHA256 dbb27462549ee643e2697230ba64bc8ff30683c8ce791d287ed73aa37ebc5b09
-DIST netkit-rsh-0.17-patches-2.tar.lzma 13731 RMD160 3d76a82f45ef22dc6e02155f4fc1c8666eb681ff SHA1 54066ef86249f8d3084d5977203fd4ca491b559b SHA256 4e133e429a308047c5e4ccdd6a12028a3f4a36bf5d8e87a33a7e11144d88fa3a
+DIST netkit-rsh-0.17-patches-3.tar.lzma 13875 RMD160 78c3f993a90288f1585ef30a2ddc2133d215cc7d SHA1 94d62e7d620bb76c7886581e0d565a354ae3f10c SHA256 e7ab523e06cf12cf2b88b404106fd56534ec15b65621e660dfd6e833037680f0
 DIST netkit-rsh-0.17.tar.gz 58268 RMD160 288dd91c84fcebde8e401d3d0bf93d99c3bac73e SHA1 022185bf31af23abbb6d4f34621f94d9d0c4b6ea SHA256 edcac7fa18015f0bc04e573f3f54ae3b638d71335df1ad7dae692779914ad669
 DIST rexec-1.5.tar.gz 18469 RMD160 713ed4e6ec125f8f0b8056eb53b41e4e34e6c29b SHA1 cee670cccf50741022f453b9ae42f3823418b5d2 SHA256 9bcf9986eb9637d1b8e8ab62a61c80f3422d628e837e72c6ad8c2e38604ccaf4
-EBUILD netkit-rsh-0.17-r9.ebuild 1992 RMD160 7ae438b9f10ee9198340911d688d82ccb40863c9 SHA1 5f2ea847bdd74e1e6da597bec1da32489deacdb8 SHA256 22d08cc0a0be35c7056a8977a1ca11124e51faa921855bc8ebc97ba2070e54de
-MISC ChangeLog 10355 RMD160 b8d052762c49e3611b0ce9780fa89b72160e9eac SHA1 c6c74486f7f76700f8696ccfcb9b6fc09542bc49 SHA256 75c8ad43646db2e0e5be5f6aa31844b492194b02e9127efb3f3171ad66bab277
+EBUILD netkit-rsh-0.17-r9.ebuild 1988 RMD160 121296dedb26e9eb25fdf2381150af5857314aa4 SHA1 292f5e7ed90fdd1908b1cb42a9f50879c0c7b1cf SHA256 708dc6931289d7df3dfc9d5ed3eda2287891e6edfad35135b2ceece14c1e76c8
+MISC ChangeLog 10456 RMD160 1024e541278eaede91b1d3f41d4452f77019777c SHA1 b0d29e7271c807ec36bac24a7c049db0ac65ef53 SHA256 1e306661e234eecf45cb040e0185341f7980dbb454b0048fcc3e47d53108e29a
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (SunOS)
+
+iEYEARECAAYFAk+/5WIACgkQX3X2B8XHTokNlwCfRecXqmvx2QL70/lL/RYG3SZ5
+HTIAmQHed3yL7RsYLT3Qo9Lg2tmpZNSh
+=sG3c
+-----END PGP SIGNATURE-----
