@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/netkit-rsh
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/netkit-rsh/ChangeLog,v 1.67 2009/09/10 15:37:23 ssuominen Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/netkit-rsh/ChangeLog,v 1.68 2012/03/08 11:14:24 naota Exp $
+
+  08 Mar 2012; Naohiro Aota <naota@gentoo.org> netkit-rsh-0.17-r9.ebuild:
+  Bump patch version. #328081
 
   10 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
   netkit-rsh-0.17-r9.ebuild:
